--- a/src/app/restaurent/pages/checkout/checkout.component.html
+++ b/src/app/restaurent/pages/checkout/checkout.component.html
@@ -561,7 +561,7 @@
     </div> <!-- End of Web View-->
     <div class="mobile-view" fxShow.sm fxShow.xs fxHide.lg fxHide.md fxHide.xl>
       <div class="brand-info">
-        <!-- <div class="restaurant-info">
+         <div class="restaurant-info">
           <div class="container">
             <div class="row">
               <div class="col-sm-12" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="15px">
@@ -593,7 +593,7 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
         <div class="food-added-item py-2">
           <div class="container">
             <div class="row">
@@ -777,7 +777,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12" *ngIf="locationDetails.likePrdoucts.length > 0">
-                <h6 class="mb-3">You may also like</h6>
+                <h6 class="mb-3">You May Also Like</h6>
                 <div class="swiper-container charity-swiperMobile">
                   <div class="swiper-wrapper">
                     <div *ngFor="let variation of locationDetails.likePrdoucts; let i = index" class="swiper-slide">
@@ -975,13 +975,13 @@
                     location_on
                     </i>
                     <!-- {{placeOrderBody.data.orderData.ServiceId==2?'Delivering food to':'Pickup food from'}} -->
-                    <span *ngIf="placeOrderBody.data.orderData.ServiceId == 1">Pickup food from</span>
-                    <span *ngIf="placeOrderBody.data.orderData.ServiceId == 2">Delivering food to</span>
+                    <span *ngIf="placeOrderBody.data.orderData.ServiceId == 1">Pickup Food From</span>
+                    <span *ngIf="placeOrderBody.data.orderData.ServiceId == 2">Delivering Food To</span>
                     <span *ngIf="placeOrderBody.data.orderData.ServiceId == 3">Curbside</span>
                     
                     <!-- <span *ngIf="placeOrderBody.data.orderData.ServiceId == 5">Dine In</span> -->
                   </h6>
-                  <a href="#"><small>(Change Address)</small></a>
+                  <a *ngIf="placeOrderBody.data.orderData.ServiceId == 2" data-target="#mobilechangelocation" data-toggle="modal"><small>(Change Address)</small></a>
                 </div>
                 <div fxLayout="row" fxLayoutAlign="space-between start">
                   <p class="d-flex align-items-start mb-0" *ngIf="placeOrderBody.data.orderData.ServiceId == 1">
@@ -993,10 +993,10 @@
                     </span>
                     {{selectedAddress?selectedAddress.Addr1?selectedAddress.Addr1:'No address selected.':'No address selected.'}}
                   </div>
-                  <span *ngIf="placeOrderBody.data.orderData.ServiceId == 2">
+                  <!--<span *ngIf="placeOrderBody.data.orderData.ServiceId == 2">
                     <a href="javascript:void(0);" class="text-orange" data-toggle="modal"
                       data-target="#mobilechangelocation">Change</a>
-                  </span>
+                  </span>-->
                   <span *ngIf="placeOrderBody.data.orderData.ServiceId == 3">
                     <div *ngIf="placeOrderBody.data.orderData.ServiceId == 3" class="section-content1 ">
                       <div class="row">
@@ -1115,8 +1115,8 @@
                 </div>
 
                 <ul class="list-unstyled payment-option">
-                  <li class="py-2 border-bottom">
-                    <div class="d-flex align-items-center justify-content-between">
+                  <li *ngIf="country.toUpperCase()  == 'AU' && PaymentTypes == true" class="py-2 border-bottom">
+                    <div (click)="onSelectCcPayment(); creditMobile()" class="d-flex align-items-center justify-content-between">
                       <div class="left d-flex align-items-center">
                         <div class="icon">
                           <span class="mr-2"><i class="fa fa-credit-card" aria-hidden="true"></i></span>
@@ -1126,8 +1126,31 @@
                       <span><i class="fa fa-angle-right" aria-hidden="true"></i></span>
                     </div>
                   </li>
-                  <li class="py-2">
-                    <div class="d-flex align-items-center justify-content-between">
+                  <li *ngIf="country.toUpperCase()  == 'US' && PaymentTypes == true" class="py-2 border-bottom">
+                    <div (click)="onSelectCcPayment(); creditMobile()" class="d-flex align-items-center justify-content-between">
+                      <div class="left d-flex align-items-center">
+                        <div class="icon">
+                          <span class="mr-2"><i class="fa fa-credit-card" aria-hidden="true"></i></span>
+                        </div>
+                        Debit/Credit Card
+                      </div>
+                      <span><i class="fa fa-angle-right" aria-hidden="true"></i></span>
+                    </div>
+                  </li>
+                  <li *ngIf="country.toUpperCase()  == 'IN' && locationDetails.PaymentProviderPaytm == 'T'" class="py-2 border-bottom">
+                    <div (click)="placeOrderBody.data.orderData.PaymentTypeId = 4" class="d-flex align-items-center justify-content-between">
+                      <div class="left d-flex align-items-center">
+                        <div class="icon">
+                          <span class="mr-2"><i class="fa fa-credit-card" aria-hidden="true"></i></span>
+                        </div>
+                        PAYTM
+                      </div>
+                      <span><i class="fa fa-angle-right" aria-hidden="true"></i></span>
+                    </div>
+                  </li>
+                  <!--<span class="col-md-12 d-block" *ngIf="country.toUpperCase()  == 'IN' && locationDetails.PaymentProviderPaytm == 'T'">   <input  type="radio" name="paymentRadio" class="unchekRadioPayment" (click)="placeOrderBody.data.orderData.PaymentTypeId = 4"> PAYTM</span>-->
+                  <li *ngIf="PaymentTypesCOD == true" class="py-2">
+                    <div (click)="onSelectCODPayment(); cashMobile()" class="d-flex align-items-center justify-content-between">
                       <div class="left d-flex align-items-center">
                         <div class="icon">
                           <span class="mr-2"><i class="fa fa-money" aria-hidden="true"></i></span>
