--- a/src/app/restaurent/pages/checkout/checkout.component.html
+++ b/src/app/restaurent/pages/checkout/checkout.component.html
@@ -154,7 +154,7 @@
                         </div>
                         <div class="col-sm-6">
 
-                          <h4>Choose Your Organization:</h4>
+                          <h4>Choose Your Organization</h4>
                           <p class="mb-3 cost text-dark">It Cost you Nothing</p>
                         </div>
                         <div class="col-sm-6 text-right m-0 p-0 d-flex align-items-center codesubmit"
@@ -842,8 +842,8 @@
               <div class="add-tip col-md-12" >
                 <div class="title">
                   <h6 class="m-0" *ngIf="placeOrderBody.data.orderData.ServiceId == 2" >Add A Tip For Your Rider</h6>
-                  <h6 class="m-0" *ngIf="placeOrderBody.data.orderData.ServiceId == 2">Add A Tip For Your Server </h6>
-        
+                  <h6 class="m-0" *ngIf="placeOrderBody.data.orderData.ServiceId == 5">Add A Tip For Your Server </h6>
+
                   <ul class="ks-cboxtags mb-0">
         
         
@@ -1056,7 +1056,7 @@
                           <i class="fa fa-angle-down" aria-hidden="true" (click)="openmobiledonation()"></i>
                         </div>
 
-                        <h6 class="mb-0">Choose Your Organization:</h6>
+                        <h6 class="mb-0">Choose Your Organization</h6>
                         <p class="mb-0 cost">It Cost you Nothing</p>
                       </div>
                       <!-- <div class="col-sm-12 col-xs-12 mt-1  d-flex align-items-center" style="justify-content: space-between;">
