--- a/src/app/restaurent/base-layout/header/header.component.html
+++ b/src/app/restaurent/base-layout/header/header.component.html
@@ -21,13 +21,13 @@
                  <!--<span class="web-icon"><i class="fa fa-clock-o mr-1 text-white"
                                            aria-hidden="true"></i>Open Time
                 </span>-->
-                   <span style="font-size: 14px;" *ngIf="locationDetails && locationDetails.Menus.length && !openCloseTime" [innerHTML]="locationDetails.OpenCloseTime" class="web-icon"></span>
-                   <span style="font-size: 14px;" *ngIf="locationDetails && locationDetails.Menus.length && openCloseTime" class="web-icon">{{openCloseTime}}</span>
+                   <span style="font-size: 12px;" *ngIf="locationDetails && locationDetails.Menus.length && !openCloseTime" [innerHTML]="locationDetails.OpenCloseTime" class="web-icon"></span>
+                   <span style="font-size: 12px;" *ngIf="locationDetails && locationDetails.Menus.length && openCloseTime" class="web-icon">{{openCloseTime}}</span>
                   </div>
                 </div>
               </div>
             </span>
-            <span *ngIf="currentAddr" fxHide.xs>
+          <!--  <span *ngIf="currentAddr" >
               <small class="text-gray">Your Current Location</small>
               <div fxLayout="row" fxLayoutAlign="start center">
                 <div class="address">
@@ -35,7 +35,7 @@
                 </div>
                 <span class="ml-2"><a href="javascript:void(0);" data-toggle="modal" data-target="#changelocation"> (Change)</a></span>
               </div>
-            </span>
+            </span>-->
           </div>
         </div>
         <div class="right">
