changes done by sanjay

--- a/src/app/restaurent/base-layout/header/restaurent-info/restaurent-info.component.scss
+++ b/src/app/restaurent/base-layout/header/restaurent-info/restaurent-info.component.scss
@@ -36,7 +36,7 @@
         }
 
         p {
-          color: rgba($white, .7);
+          color: rgba($white, 1);
           margin-bottom: 5px;
           i{
             color: $white;
