--- a/src/app/restaurent/pages/login/login.component.scss
+++ b/src/app/restaurent/pages/login/login.component.scss
@@ -184,7 +184,7 @@
       margin-bottom: 25px;
       h1{
         font-weight: 700;
-        font-family: "Poppins", sans-serif !important;
+        font-family: "Open Sans", sans-serif !important;
         margin: 0;
       }
     }
