--- a/src/app/restaurent/base-layout/body/body.component.html
+++ b/src/app/restaurent/base-layout/body/body.component.html
@@ -6,6 +6,50 @@
   </nb-layout-header>
   <nb-layout-column class="p-0 bg-white">
     <router-outlet></router-outlet>
+    <div class="card">
+      <style>
+        .btn.btn-rounded {
+          min-width: 100px;
+          border-radius: 100px;
+          padding-top: 6px;
+          padding-bottom: 6px;
+          min-height: 40px;
+          font-size: 13px;
+        }
+        .brand-icon {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 40px;
+          width: 40px;
+          background: aliceblue;
+          border-radius: 4px;
+        }
+      </style>
+      <div class="card-header bg-white">Open BellyMelly in...</div>
+      <div class="card-body">
+        <div class="card-content">
+          <div class="d-flex align-items-center justify-content-between app-list-item mb-3">
+            <div class="left d-flex align-items-center">
+              <div class="brand-icon mr-3">
+                <img src="assets/images/safari.svg" height="38px" width="38px">
+              </div> BellyMelly App
+            </div>
+            <div class="right">
+              <button class="btn btn-primary btn-rounded">Open</button>
+            </div>
+          </div>
+          <div class="d-flex align-items-center justify-content-between app-list-item">
+            <div class="left d-flex align-items-center">
+              <div class="brand-icon mr-3"><img src="assets/images/favicon.png" height="38px" width="38px"></div> Browser
+            </div>
+            <div class="right">
+              <button class="btn btn-light btn-rounded">Continue</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </nb-layout-column>
   <!--<nb-layout-footer fixed>-->
     <!--&lt;!&ndash; Insert footer here &ndash;&gt;-->
