--- a/src/app/restaurent/pages/checkout/checkout.component.html
+++ b/src/app/restaurent/pages/checkout/checkout.component.html
@@ -794,7 +794,7 @@
                           </div>
       
                         <div class="dish-info text-dark">
-                          <h6 class="my-1 text-truncate text-dark">{{variation.Name}}</h6>
+                          <div class="my-1 text-truncate text-dark dish-title">{{variation.Name}}</div>
                           <div class="d-flex justify-content-between align-items-center">
                             <p *ngIf="variation.data.P1 && variation.P1 > 0" class="text-success mb-0 price">{{currency}}{{(variation.P1).toFixed(2)}}</p>
                             <p *ngIf="variation.data.P2 && (variation.P2 > 0 && (!variation.P1 || variation.P1 <= 0))"
