--- a/src/app/restaurent/pages/checkout/checkout.component.scss
+++ b/src/app/restaurent/pages/checkout/checkout.component.scss
@@ -444,6 +444,7 @@
               width: 100%;
               text-align: center;
               padding: 0px 8px;
+              font-size: .8rem;
               &::before {
                 display: inline-block;
                 font-style: normal;
