--- a/src/app/restaurent/pages/dish-items/dish-items.component.html
+++ b/src/app/restaurent/pages/dish-items/dish-items.component.html
@@ -24,7 +24,7 @@
               <div class="card-body">
                 <div class="">
                   <div class="card-title" title="{{data.Name}}">
-                    {{data.Name}}
+                    <div class="dish-title">{{data.Name}}</div>
                     <span *ngIf="data.Icon1"><img  src="{{data.Icon1}}"></span>
                     <span *ngIf="data.Icon2"><img  src="{{data.Icon2}}"></span>
                     <span *ngIf="data.Icon3"><img  src="{{data.Icon3}}"></span>
@@ -73,7 +73,7 @@
           <div class="left">
             <div class="" fxflex.xs="50" fxLayout="row" fxLayoutAlign="center center" fxLayoutAlign.sm="center end">
               <div>
-                <h6>{{data.Name}}</h6>
+                <div class="dish-title">{{data.Name}}</div>
                 <p class="text-gray assign-width">{{correctDesc(data.Desc)}}</p>
                 <p *ngIf="item.P1 && data.P1 > 0" class="text-success mb-0 price">{{currency}} {{(data.P1).toFixed(2)}}</p>
                 <p *ngIf="item.P2 && (data.P2 > 0 && (!data.P1 || data.P1 <= 0))" class="text-success mb-0 price">{{currency}} {{(data.P2).toFixed(2)}}</p>
