--- a/src/app/restaurent/pages/dish-items/dish-items.component.scss
+++ b/src/app/restaurent/pages/dish-items/dish-items.component.scss
@@ -25,7 +25,7 @@
         width: auto;
         .list-view{
           padding-bottom: 10px;
-          padding-top: 2px;
+          padding-top: 10px;
           float: left;
           width: 100%;
           max-width: 100%;
@@ -137,7 +137,7 @@
               line-height: 1.3;
             }
             .card-body{
-              padding: .5rem; 
+              padding: .5rem 0; 
               // min-height: 124px;
               // max-height: 124px;  
               @media (max-width: 991px) {
@@ -207,10 +207,10 @@
 .title{
   position: -webkit-sticky;
   position: sticky;
-  top: 76px;
+  top: 58px;
   z-index: 1000;
   background: #fff;
-  padding: 0;
+  padding: 8px 0;
 }
 @media (max-width: 767px) {
 
