--- a/src/app/restaurent/pages/home/sidebar/categories/categories.component.scss
+++ b/src/app/restaurent/pages/home/sidebar/categories/categories.component.scss
@@ -9,11 +9,14 @@
       text-align: right;
       padding-right: 15px;
       padding-left: 15px;
+      font-family: 'Poppins', sans-serif !important;
       a{
         color: $dark-black;
         padding: 5px 0;
         display: block;
         font-weight: 500;
+        text-transform: capitalize;
+        font-size: .8rem;
       }
       &:last-child{
         a{
