--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 @import 'themes';
 @import '~@nebular/theme/styles/globals';
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap');
 @include nb-install() {
   @include nb-theme-global();
 }
@@ -9,7 +9,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "assets/css/variables";
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif !important;
   font-weight: 400;
   color: $black;
   font-size: 14px;
@@ -18,16 +18,26 @@ body {
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
-
+h1,h2,h3,h4,h5,h6,
+.h1,.h2,.h3,.h4,.h5,.h6{
+  font-family: 'Poppins', sans-serif !important;
+}
+p{
+  font-size: 14px !important;
+}
+.form-control{
+  font-size: .9rem;
+}
 *,button,input {
   box-sizing: border-box;
   &:focus{
     outline: none;
   }
 }
-h6, .h6{
+h6, .h6,.title .title-heading{
   font-size: 1rem !important;
-  line-height: 1rem !important;
+  line-height: 1.5 !important;
+  font-weight: 600 !important;
 }
 @media (max-width: 767px){
   .nb-theme-corporate nb-layout-header nav{
@@ -112,7 +122,7 @@ a {
 button {
   &.btn {
     font-size: 14px;
-    text-transform: uppercase;
+    text-transform: capitalize;
     font-weight: 500;
     padding-top: 12px;
     padding-bottom: 12px;
@@ -202,7 +212,7 @@ header {
   }
   .title-heading {
     font-weight: 600;
-    text-transform: uppercase;
+    text-transform: capitalize;
     font-size: 14px;
     line-height: 26px;
     display: block;
@@ -860,4 +870,14 @@ nb-checkbox {
 }
 .btn-site:hover{
   color: #fff;
+}
+.modal-backdrop {
+  z-index: 1039;
+}
+.material-icons{
+  font-size: 1.5rem;
+}
+.dish-title {
+  font-weight: 500;
+  font-size: .9rem;
 }
