changes done by sanjay

--- a/src/app/restaurent/base-layout/body/body.component.html
+++ b/src/app/restaurent/base-layout/body/body.component.html
@@ -10,6 +10,9 @@
       <style>
         .app-open-option{
           display: none;
+          position: fixed;
+          width: 100%;
+          bottom: 0;
         }
         @media (max-width: 480px){
           .app-open-option{
