--- a/src/app/restaurent/base-layout/body/body.component.html
+++ b/src/app/restaurent/base-layout/body/body.component.html
@@ -37,7 +37,7 @@
           border-radius: 4px;
         }
       </style>
-      <div class="card-header bg-white">Open BellyMelly in...</div>
+      <!--<div class="card-header bg-white">Open BellyMelly in...</div>
       <div class="card-body">
         <div class="card-content">
           <div class="d-flex align-items-center justify-content-between app-list-item mb-3">
@@ -59,7 +59,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div>-->
     </div>
   </nb-layout-column>
   <!--<nb-layout-footer fixed>-->
