--- a/src/app/restaurent/pages/location-sidebar/location-sidebar.component.html
+++ b/src/app/restaurent/pages/location-sidebar/location-sidebar.component.html
@@ -79,7 +79,7 @@
       <div class="modal-body">
         <div class="col-sm-12 py-3">
           <div class="current-location mb-4">
-            <button class="btn btn-outline-default btn-block text-white" data-toggle="modal" data-target="#addlocation" data-dismiss="modal">
+            <button class="btn btn-outline-default btn-block"  data-toggle="modal" data-target="#addlocation" data-dismiss="modal">
               <nb-icon icon="pin-outline"></nb-icon> Add New Address
             </button>
           </div>
