--- a/src/app/restaurent/base-layout/body/body.component.html
+++ b/src/app/restaurent/base-layout/body/body.component.html
@@ -6,7 +6,7 @@
   </nb-layout-header>
   <nb-layout-column class="p-0 bg-white">
     <router-outlet></router-outlet>
-    <div class="card app-open-option">
+   <!-- <div class="card app-open-option">
       <style>
         .app-open-option{
           display: none;
@@ -37,7 +37,7 @@
           border-radius: 4px;
         }
       </style>
-      <!--<div class="card-header bg-white">Open BellyMelly in...</div>
+      <div class="card-header bg-white">Open BellyMelly in...</div>
       <div class="card-body">
         <div class="card-content">
           <div class="d-flex align-items-center justify-content-between app-list-item mb-3">
@@ -59,8 +59,8 @@
             </div>
           </div>
         </div>
-      </div>-->
-    </div>
+      </div>
+    </div>-->
   </nb-layout-column>
   <!--<nb-layout-footer fixed>-->
     <!--&lt;!&ndash; Insert footer here &ndash;&gt;-->
