--- a/src/app/restaurent/base-layout/header/restaurent-info/restaurent-info.component.html
+++ b/src/app/restaurent/base-layout/header/restaurent-info/restaurent-info.component.html
@@ -126,7 +126,7 @@
           </li>
           <li class="col">
             <div class="text-center" *ngIf="!dineinExist">
-              <img src="assets/images/distance.svg"> <p class="m-0">{{distance}}Mi</p>
+              <img src="assets/images/distance.svg"> <p class="m-0">{{distance}}Miles</p>
             </div>
           </li>
         </ul>
