--- a/src/app/restaurent/pages/fooddepo/fooddepo.component.html
+++ b/src/app/restaurent/pages/fooddepo/fooddepo.component.html
@@ -117,7 +117,7 @@
         <div class="col-md-12">
           <ul class="nav nav-pills">
             <li><a data-toggle="pill" href="#partners" class="active">Partner Restaurants</a></li>
-            <li><a data-toggle="pill" href="#donors">Contribution Details</a></li>
+            <!--<li><a data-toggle="pill" href="#donors">Contribution Details</a></li>-->
           </ul>
           <div class="tab-content ">
             <div id="partners" class="tab-pane in active py-3">
@@ -145,7 +145,7 @@
               </div>
 
             </div>
-            <div id="donors" class="tab-pane fade py-3">
+            <!--<div id="donors" class="tab-pane fade py-3">
               <div class="row">
                 <div class="col-md-6" *ngFor="let val of Orderlist;let i = index;">
                   <div class="card mb-2" >
@@ -153,10 +153,10 @@
                       <div class="row ">
                         <div class="col-md-8">
                           <h5 class="card-title font-weight-bold">{{val.RestName}}</h5>
-                          <!-- <p class="card-text mb-0"><span class="text-secondary font-weight-bold">Donated By:</span> {{val.CustName}}</p> -->
+                          &lt;!&ndash; <p class="card-text mb-0"><span class="text-secondary font-weight-bold">Donated By:</span> {{val.CustName}}</p> &ndash;&gt;
                         </div>
                         <div class="col-md-4 py-2 text-center d-flex justify-content-end align-items-center">
-                          <!-- <a href="#" class="btn btn-primary btn-site rounded-0">Donate Us</a> -->
+                          &lt;!&ndash; <a href="#" class="btn btn-primary btn-site rounded-0">Donate Us</a> &ndash;&gt;
                           <p class="card-text mb-0"><span class="text-secondary font-weight-bold">Donated Amount:</span> $ {{val.OrderDonateValue}}</p>
                         </div>
                       </div>
@@ -164,7 +164,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div>-->
           </div>
         </div>
 
